perf: optimizing memory usage (#120)